fixed bugs in js

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <title>Horizontal image slideshow</title>
   <meta charset="UTF-8">
@@ -13,12 +12,12 @@
   <div class="overlay"></div>
   <div class="base">
     <ul class="nav">
-      <li id="start">back to start</li>
+      <li class="start">back to start</li>
       <li class="current">horizontal slides</li>
       <li><a href="vertical/vert.html">vertical slides</a></li>
     </ul>
     <div class="frame">
-      <div class="button hidden prev">previous</div>
+      <div class="button prev hidden">previous</div>
       <img src="img/1.png" class="pic one active">
       <img src="img/2.png" class="pic two">
       <img src="img/3.png" class="pic three">
