--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <title>Horizontal image slideshow</title>
   <meta charset="UTF-8">
@@ -27,9 +28,11 @@
     </div>
   </div>
 
-  <!-- <script src="http://code.jquery.com/jquery.min.js"></script> -->
-  <script src="jquery.js"></script>
-  <script src="horizontal/horiz.js" type="text/javascript"></script>
+  <script src="http://code.jquery.com/jquery.min.js"></script>
+  <script>
+    if (!window.jQuery) document.write('<script src="jquery.js"><\/script>');
+  </script>
+  <script src="script.js"></script>
 </body>
 
 </html>
