corrected script links in html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   <script>
     if (!window.jQuery) document.write('<script src="jquery.js"><\/script>');
   </script>
-  <script src="script.js"></script>
+  <script src="horizontal/horiz.js"></script>
+  <script src="vertical/vert.js"></script>
 </body>
 
 </html>
