updated script tags

--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
     </div>
   </div>
 
-  <script src="http://code.jquery.com/jquery.min.js"></script>
-  <script>
-    if (!window.jQuery) document.write('<script src="jquery.js"><\/script>');
-  </script>
-  <script src="horizontal/horiz.js"></script>
-  <script src="vertical/vert.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="jquery.js"></script> -->
+  <script type="text/javascript" src="horizontal/horiz.js"></script>
+  <script type="text/javascript" src="vertical/vert.js"></script>
 </body>
 
 </html>
