--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
   <!-- <script type="text/javascript" src="jquery.js"></script> -->
   <script type="text/javascript" src="horizontal/horiz.js"></script>
   <script type="text/javascript" src="vertical/vert.js"></script>
